--- a/index.html
+++ b/index.html
@@ -144,6 +144,12 @@
         Lihat Wireframe di Figma</a>
     </p>
 
+    <h3>CV Portofolio</h3>
+    <p>
+        🔗 <a href="https://drive.google.com/file/d/1EgKLt18yiPMtXHruGols9t_S6-zgOD61/view?usp=sharing" target="_blank">
+        VC Portofolio</a>
+    </p>
+
     <h2>BAHASA</h2>
     <ul>
         <li>Bahasa Indonesia</li>
