--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             margin-top: 35px;
         }
         h3 {
+            margin-top: 20px;
             margin-bottom: 5px;
         }
         p, li {
@@ -134,17 +135,51 @@
 
     <h3>siKuli (Sistem Kuliah) – Mockup dan Prototype</h3>
     <p>
+        <strong>siKuli</strong> adalah website sistem kuliah yang dirancang sebagai
+        pusat informasi digital terpadu bagi mahasiswa Indonesia. Aplikasi ini
+        membantu mahasiswa dalam mengakses informasi akademik, tugas, nilai, dan
+        interaksi melalui forum diskusi dalam satu platform terintegrasi.
+    </p>
+
+    <p><strong>Fitur dan Halaman yang Dirancang:</strong></p>
+    <ul>
+        <li><strong>Login Mahasiswa</strong> – Autentikasi menggunakan NIM dan password.</li>
+        <li><strong>Beranda (Dashboard)</strong> – Menampilkan forum diskusi, komunitas, dan informasi terbaru.</li>
+        <li><strong>Forum Diskusi & Komunitas</strong> – Media interaksi antar mahasiswa.</li>
+        <li><strong>Tugas</strong> – Upload tugas berdasarkan mata kuliah dan status pengumpulan.</li>
+        <li><strong>Deadline & Progress</strong> – Informasi tenggat waktu dan progres tugas.</li>
+        <li><strong>Mata Kuliah</strong> – Daftar mata kuliah dan dosen pengampu.</li>
+        <li><strong>Nilai & Transkrip</strong> – Nilai mata kuliah, jumlah SKS, dan IP semester.</li>
+        <li><strong>Profil Mahasiswa</strong> – Informasi data diri dan aktivitas.</li>
+        <li><strong>Pengaturan Akun</strong> – Pengelolaan data akun dan password.</li>
+    </ul>
+
+    <p>
+        Desain UI/UX siKuli dibuat dengan fokus pada
+        <strong>kemudahan navigasi, konsistensi tampilan, dan kenyamanan pengguna</strong>.
+    </p>
+
+    <p>
         🔗 <a href="https://www.figma.com/design/DsVx610f21xkUa2vxz1d5E/Untitled" target="_blank">
-        Lihat Desain di Figma</a>
+        Lihat Desain siKuli di Figma</a>
     </p>
 
     <h3>Buku Resep – Wireframe</h3>
     <p>
+        Proyek wireframe aplikasi Buku Resep yang berfokus pada perancangan struktur
+        navigasi dan tata letak antarmuka untuk memudahkan pengguna dalam mencari
+        dan membaca resep masakan.
+    </p>
+    <p>
         🔗 <a href="https://www.figma.com/design/i6aqySDPDiPpjiO7qfzPRZ/Untitled?node-id=0-1&t=cPLx1yRzJtw4TCpb-1" target="_blank">
-        Lihat Wireframe di Figma</a>
+        Lihat Wireframe Buku Resep di Figma</a>
     </p>
 
-    <h3>CV Portofolio</h3>
+    <h3>VC Portofolio</h3>
+    <p>
+        Video portofolio yang menampilkan ringkasan profil, kemampuan, dan hasil
+        proyek UI/UX yang telah dibuat.
+    </p>
     <p>
         🔗 <a href="https://drive.google.com/file/d/1EgKLt18yiPMtXHruGols9t_S6-zgOD61/view?usp=sharing" target="_blank">
         VC Portofolio</a>
