--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
   
     <p>
         🔗 <a href="https://drive.google.com/file/d/1EgKLt18yiPMtXHruGols9t_S6-zgOD61/view?usp=sharing" target="_blank">
-        VC Portofolio</a>
+        CV Portofolio</a>
     </p>
 
     <h2>BAHASA</h2>
