--- a/index.html
+++ b/index.html
@@ -175,8 +175,7 @@
         Lihat Wireframe Buku Resep di Figma</a>
     </p>
 
-    <h3>VC Portofolio</h3>
-  
+    <h3>CV Portofolio</h3>
     <p>
         🔗 <a href="https://drive.google.com/file/d/1EgKLt18yiPMtXHruGols9t_S6-zgOD61/view?usp=sharing" target="_blank">
         CV Portofolio</a>
